syntax = "proto3";

option csharp_namespace = "FileTransfer.Shared";

package filetransfer;

message FileChunk {
  string fileName = 1;
  int64 offset = 2;
  bytes data = 3;
  bool isLast = 4;
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}

message FileQueryRequest {
  string fileName = 1;
}

message FileOffsetResponse {
  int64 offset = 1;
}

service FileTransferService {
  rpc Upload(stream FileChunk) returns (UploadStatus);
  rpc GetUploadedOffset(FileQueryRequest) returns (FileOffsetResponse);
}
